--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -5,7 +5,7 @@
   .list {
     &_empty {
       width: 100%;
-      height: 55vh;
+      padding: 5rem 0;
       display: flex;
       align-items: center;
     }
