--- a/src/styles/components/taskitem.module.scss
+++ b/src/styles/components/taskitem.module.scss
@@ -24,4 +24,8 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  @media (max-width: 480px) {
+    padding: 0.5rem 0 0.5rem 0.5rem;
+  }
 }
